docs/content/docs/v5/foundations/errors-and-retries.mdx
---
title: Errors & Retrying
description: Customize retry behavior with FatalError and RetryableError.
type: conceptual
summary: Control how steps handle failures and customize retry behavior.
languageSwitcher:
  - ts
  - py
prerequisites:
  - /docs/foundations/workflows-and-steps
related:
  - /docs/api-reference/workflow/fatal-error
  - /docs/api-reference/workflow/retryable-error
  - /docs/api-reference/python/errors
---

By default, errors thrown inside steps are retried. Additionally, Workflow SDK provides two new types of errors you can use to customize retries.

## Default retrying

By default, steps retry up to 3 times on arbitrary errors. You can customize the number of retries by adding a <LanguageContent value="ts" inline>`maxRetries` property to the step function</LanguageContent><LanguageContent value="py" inline>`max_retries` parameter to the step decorator</LanguageContent>.

<LanguageContent value="ts">

```typescript lineNumbers
async function callApi(endpoint: string) {
  "use step";

  const response = await fetch(endpoint);

  if (response.status >= 500) {
    // Any uncaught error gets retried
    throw new Error("Uncaught exceptions get retried!"); // [!code highlight]
  }

  return response.json();
}

callApi.maxRetries = 5; // Retry up to 5 times on failure (6 total attempts)
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import httpx

from app.workflow import wf

@wf.step(max_retries=5)  # Retry up to 5 times on failure (6 total attempts)
async def call_api(endpoint: str):
    async with httpx.AsyncClient() as client:
        response = await client.get(endpoint)

        if response.status_code >= 500:
            # Any uncaught error gets retried
            raise RuntimeError("Uncaught exceptions get retried!")  # [!code highlight]

        return response.json()
```

</LanguageContent>

Steps get enqueued immediately after a failure. Read on to see how this can be customized.

<Callout type="info">
  When a retried step performs external side effects (payments, emails, API
  writes), ensure those calls are <strong>idempotent</strong> to avoid duplicate
  side effects. See <a href="/docs/foundations/idempotency">Idempotency</a> for
  more information.
</Callout>

## Intentional errors

When your step needs to intentionally throw an error and skip retrying, throw a <LanguageLink ts="/docs/api-reference/workflow/fatal-error" py="/docs/api-reference/python/errors#fatalerror">`FatalError`</LanguageLink>.

<LanguageContent value="ts">

```typescript lineNumbers
import { FatalError } from "workflow";

async function callApi(endpoint: string) {
  "use step";

  const response = await fetch(endpoint);

  if (response.status >= 500) {
    // Any uncaught error gets retried
    throw new Error("Uncaught exceptions get retried!");
  }

  if (response.status === 404) {
    throw new FatalError("Resource not found. Skipping retries."); // [!code highlight]
  }

  return response.json();
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import httpx

from app.workflow import wf
from vercel.workflow import FatalError

@wf.step
async def call_api(endpoint: str):
    async with httpx.AsyncClient() as client:
        response = await client.get(endpoint)

        if response.status_code >= 500:
            raise RuntimeError("Uncaught exceptions get retried!")

        if response.status_code == 404:
            raise FatalError("Resource not found. Skipping retries.")  # [!code highlight]

        return response.json()
```

</LanguageContent>

## Customize retry behavior

When you need to customize the delay on a retry, use <LanguageLink ts="/docs/api-reference/workflow/retryable-error" py="/docs/api-reference/python/errors#retryableerror">`RetryableError`</LanguageLink> and set the <LanguageText code ts="retryAfter" py="retry_after" /> property.

<LanguageContent value="ts">

```typescript lineNumbers
import { FatalError, RetryableError } from "workflow";

async function callApi(endpoint: string) {
  "use step";

  const response = await fetch(endpoint);

  if (response.status >= 500) {
    throw new Error("Uncaught exceptions get retried!");
  }

  if (response.status === 404) {
    throw new FatalError("Resource not found. Skipping retries.");
  }

  if (response.status === 429) {
    throw new RetryableError("Rate limited. Retrying...", { // [!code highlight]
      retryAfter: "1m", // Duration string // [!code highlight]
    }); // [!code highlight]
  }

  return response.json();
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import httpx

from app.workflow import wf
from vercel.workflow import FatalError, RetryableError

@wf.step
async def call_api(endpoint: str):
    async with httpx.AsyncClient() as client:
        response = await client.get(endpoint)

        if response.status_code >= 500:
            raise RuntimeError("Uncaught exceptions get retried!")

        if response.status_code == 404:
            raise FatalError("Resource not found. Skipping retries.")

        if response.status_code == 429:
            raise RetryableError(  # [!code highlight]
                "Rate limited. Retrying...",
                retry_after="1m",  # Duration string  # [!code highlight]
            )

        return response.json()
```

</LanguageContent>

## Advanced example

This final example combines everything we've learned, along with <LanguageLink ts="/docs/api-reference/workflow/get-step-metadata" py="/docs/api-reference/python/get-step-metadata"><LanguageText code ts="getStepMetadata" py="get_step_metadata()" /></LanguageLink>.

<LanguageContent value="ts">

```typescript lineNumbers
import { FatalError, RetryableError, getStepMetadata } from "workflow";

async function callApi(endpoint: string) {
  "use step";

  const metadata = getStepMetadata();

  const response = await fetch(endpoint);

  if (response.status >= 500) {
    // Exponential backoffs
    throw new RetryableError("Backing off...", {
      retryAfter: (metadata.attempt ** 2) * 1000,  // [!code highlight]
    });
  }

  if (response.status === 404) {
    throw new FatalError("Resource not found. Skipping retries.");
  }

  if (response.status === 429) {
    throw new RetryableError("Rate limited. Retrying...", {
      retryAfter: new Date(Date.now() + 60000),  // Date instance // [!code highlight]
    });
  }

  return response.json();
}
callApi.maxRetries = 5; // Retry up to 5 times on failure (6 total attempts)
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from datetime import datetime, timedelta, timezone

import httpx

from app.workflow import wf
from vercel.workflow import FatalError, RetryableError, get_step_metadata

@wf.step(max_retries=5)
async def call_api(endpoint: str):
    metadata = get_step_metadata()

    async with httpx.AsyncClient() as client:
        response = await client.get(endpoint)

        if response.status_code >= 500:
            # Exponential backoff. Numeric Python durations are seconds.
            raise RetryableError(
                "Backing off...",
                retry_after=metadata.attempt**2,  # [!code highlight]
            )

        if response.status_code == 404:
            raise FatalError("Resource not found. Skipping retries.")

        if response.status_code == 429:
            raise RetryableError(
                "Rate limited. Retrying...",
                retry_after=datetime.now(timezone.utc) + timedelta(minutes=1),  # [!code highlight]
            )

        return response.json()
```

</LanguageContent>

<Callout type="info">
  Setting <LanguageText code ts="maxRetries = 0" py="max_retries=0" /> means the step will run once but will not
  be retried on failure. The default is <LanguageText code ts="maxRetries = 3" py="max_retries=3" />, meaning the
  step can run up to 4 times total (1 initial attempt + 3 retries).
</Callout>

## Serialization failures

A step whose arguments or return value cannot be [serialized](/docs/foundations/serialization) fails like a step whose body threw a `FatalError`: the failure is deterministic, so it skips the retry loop. You can catch the error around the step call:

<LanguageContent value="ts">

```typescript lineNumbers
async function someStep(input: unknown) {
  "use step";
  return input;
}

export async function myWorkflow(input: unknown) {
  "use workflow";

  try {
    await someStep(input);
  } catch (err) {
    if ((err as Error).name === "SerializationError") {
      // e.g. `Failed to serialize step arguments at path "..."`
    }
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from app.workflow import wf
from vercel.workflow import SerializationError

@wf.step
async def some_step(value):
    return value

@wf.workflow
async def my_workflow(value):
    try:
        await some_step(value)
    except SerializationError:
        # The step arguments could not be serialized.
        pass
```

</LanguageContent>

Uncaught, the run fails immediately with the `USER_ERROR` code, without retrying. See [serialization-failed](/docs/errors/serialization-failed) for common causes and fixes.

## Error codes

When a workflow run fails, the error includes an <LanguageText code ts="errorCode" py="error_code"/> that classifies the failure, alongside the original thrown value (preserved as <LanguageText code ts="cause" py="__cause__"/>):

<LanguageContent value="ts">

```typescript lineNumbers
import { WorkflowRunFailedError } from "@workflow/errors";
import { start } from "workflow/api";

const run = await start(myWorkflow, [input]);

try {
  const result = await run.returnValue;
} catch (err) {
  if (WorkflowRunFailedError.is(err)) {
    console.log(err.errorCode); // e.g. "USER_ERROR", "MAX_EVENTS_EXCEEDED", or undefined
    // `cause` is the original thrown value, hydrated through the workflow
    // serialization pipeline. It can be any thrown value, so check shape.
    if (err.cause instanceof Error) {
      console.log(err.cause.message); // The error message
    }
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from vercel.workflow import WorkflowRunFailedError, start

run = await start(my_workflow, input)

try:
    result = await run.return_value()
except WorkflowRunFailedError as error:
    print(error.error_code)  # e.g. "USER_ERROR", "MAX_EVENTS_EXCEEDED", or undefined
    # `error.error` is the original raised value, hydrated through the workflow
    # serialization pipeline. `__cause__` will be set to the same value if it is an Exception.
    if error.__cause__ is not None:
        print(str(error.__cause__))  # The error message
```

</LanguageContent>

| Code | Meaning |
| --- | --- |
| `USER_ERROR` | An error thrown in your workflow or step code (including propagated step failures like `FatalError`) |
| `MAX_EVENTS_EXCEEDED` | The run reached the World's per-run event ceiling (25,000 on the Local and Vercel Worlds). Split unbounded loops into [child workflows](/cookbook/advanced/child-workflows); see [Limits](/docs/configuration/runtime-tuning#limits) |
| `MAX_DELIVERIES_EXCEEDED` | The run exceeded the maximum number of queue deliveries |
| `REPLAY_TIMEOUT` | A workflow replay exceeded the maximum allowed duration |
| `REPLAY_DIVERGENCE` | A replay could not consume the event log deterministically, usually because of non-deterministic workflow code. |
| `CORRUPTED_EVENT_LOG` | The event log cannot be replayed: it contains orphaned or mismatched events, or one of its stored payloads is no longer readable from the World's storage. If you see this, please [file an issue](https://github.com/vercel/workflow/issues) |
| `WORLD_CONTRACT_ERROR` | A World response violated the SDK contract; points at a World implementation bug |
| `RUNTIME_ERROR` | An internal runtime error. If you see this, please [file an issue](https://github.com/vercel/workflow/issues) |

<Callout type="info">
  The error code is also available on the run entity through the Workflow CLI (`npx workflow inspect runs <runId>`) in the `error.code` field, and as an OpenTelemetry span attribute (`workflow.error.code`) for observability.
</Callout>

## Rolling back failed steps

When a workflow fails partway through, it can leave the system in an inconsistent state.
A common pattern to address this is "rollbacks": for each successful step, record a corresponding rollback action that can undo it.
If a later step fails, run the rollbacks in reverse order to roll back.

Key guidelines:

- Make rollbacks steps as well, so they are durable and benefit from retries.
- Ensure rollbacks are [idempotent](/docs/foundations/idempotency); they may run more than once.
- Only enqueue a compensation after its forward step succeeds.

<LanguageContent value="ts">

```typescript lineNumbers
// Forward steps
async function reserveInventory(orderId: string) {
  "use step";
  // ... call inventory service to reserve ...
}

async function chargePayment(orderId: string) {
  "use step";
  // ... charge the customer ...
}

// Rollback steps
async function releaseInventory(orderId: string) {
  "use step";
  // ... undo inventory reservation ...
}

async function refundPayment(orderId: string) {
  "use step";
  // ... refund the charge ...
}

export async function placeOrderSaga(orderId: string) {
  "use workflow";

  const rollbacks: Array<() => Promise<void>> = [];

  try {
    await reserveInventory(orderId);
    rollbacks.push(() => releaseInventory(orderId));

    await chargePayment(orderId);
    rollbacks.push(() => refundPayment(orderId));

    // ... more steps & rollbacks ...
  } catch (e) {
    for (const rollback of rollbacks.reverse()) {
      await rollback();
    }
    // Rethrow so the workflow records the failure after rollbacks
    throw e;
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from collections.abc import Awaitable, Callable

from app.workflow import wf

@wf.step
async def reserve_inventory(order_id: str):
    # ... call inventory service to reserve ...
    pass

@wf.step
async def charge_payment(order_id: str):
    # ... charge the customer ...
    pass

@wf.step
async def release_inventory(order_id: str):
    # ... undo inventory reservation ...
    pass

@wf.step
async def refund_payment(order_id: str):
    # ... refund the charge ...
    pass

@wf.workflow
async def place_order_saga(order_id: str):
    rollbacks: list[Callable[[], Awaitable[None]]] = []

    try:
        await reserve_inventory(order_id)
        rollbacks.append(lambda: release_inventory(order_id))

        await charge_payment(order_id)
        rollbacks.append(lambda: refund_payment(order_id))

        # ... more steps and rollbacks ...
    except Exception:
        for rollback in reversed(rollbacks):
            await rollback()
        raise
```

</LanguageContent>
